samples/_failures_safe/1761343855_8c9746_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b0eae866.c: In function ‘main’:
./samples/SAFE/__tmp_b0eae866.c:127:21: error: expected declaration or statement at end of input
  127 |                     printf("Invalid matrix input.\n");
      |                     ^~~~~~
./samples/SAFE/__tmp_b0eae866.c:127:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b0eae866.c:127:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b0eae866.c:127:21: error: expected declaration or statement at end of input
